fixed blurry

--- a/src/components/timeline/Timeline.module.css
+++ b/src/components/timeline/Timeline.module.css
@@ -1,11 +1,11 @@
 
 /* src/components/timeline/Timeline.module.css */
 
-.timelineEventRow {
+/* .timelineEventRow {
   display:grid;
   grid-template-columns: 1fr auto 1fr;
   width: 100%;
-}
+} */
 
 
 
